<resources>
    <string name="app_name">Ezzak</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="cancel">cancel</string>
    <string name="continues">continue</string>
    <string name="error_url_address">error</string>
    <string name="time_out_error">time out error</string>
    <string name="connection_error">connection error</string>
    <string name="package_installed">package not installed</string>
    <string name="check_phone">check phone</string>
    <string name="check_mail">check mail</string>
    <string name="error_video">error video</string>
    <string name="check_error">check error</string>
    <string name="check_pass">the password at least 6 characters</string>
    <string name="error_match">error match</string>
    <string name="copied">copied</string>
    <string name="user_name">name</string>
    <string name="password">password</string>
    <string name="forget_pass">forget password</string>
    <string name="dont_have_account">dont have account ?</string>
    <string name="phone">phone</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="terms">terms and conditions</string>
    <string name="send">send</string>
    <string name="confirm">confirm</string>
    <string name="accept">accept</string>
    <string name="error_connection">error connection</string>
    <string name="reload">reload</string>
    <string name="no_item">sorry no items</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="address">address :\u0020</string>
    <string name="notifications">notifications</string>
    <string name="edit">edit</string>
    <string name="ok">ok</string>
    <string name="gps_msg">please open GPS to detect location</string>
    <string name="alert">alert</string>
    <string name="main">main</string>
    <string name="contact_us">contact us</string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="logout_msg">are you sure you want logout ?</string>
    <string name="language">language</string>
    <string name="arabic">العربية</string>
    <string name="english">english</string>
    <string name="save">save</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="current_password">current password</string>
    <string name="new_password">new password</string>
    <string name="home">home</string>
    <string name="km">KM</string>
    <string name="details">details</string>
    <string name="no_search_res">no search result found</string>
    <string name="order_now">order now</string>
    <string name="out_doors">outdoors</string>
    <string name="time">time</string>
    <string name="my_orders">my orders</string>
    <string name="choose_your_location">choose your location</string>
    <string name="resend_code">resend activation code</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="share">share</string>
    <string name="app_language">app language</string>
    <string name="updated_successfully">data updated successfully</string>
    <string name="change_pass">change password</string>
    <string name="back_home">back to main</string>
    <string name="sure">are you sure to sign out the stored data will clear ?</string>
    <string name="empty_field">empty title message</string>
    <string name="cont">continue</string>
    <string name="new_account">create new account</string>
    <string name="welcome_back">welcome back login to complete</string>
    <string name="bills_msg">to receive your bills and latest displays</string>
    <string name="enter_phone_msg">type phone number</string>
    <string name="enter_your_phone">enter your phone to complete register and login</string>
    <string name="enter_mail_msg">enter your e-mail</string>
    <string name="mail">e-mail</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="agree_terms">agree on</string>
    <string name="enter_pass_msg">create your password</string>
    <string name="pass_msg">at least 6 characters at password</string>
    <string name="enter_verif_msg">enter your verification code</string>
    <string name="recieve_msg">you will receive sms with verification code to your number</string>
    <string name="forgot_password">forgot your password ?</string>
    <string name="just_phone">just enter your phone and you will receive verification code</string>
    <string name="recieve_msg_sent">you received sms with 4 digits verification code please verify it</string>
    <string name="enter_new_pass">enter your new password</string>
    <string name="edit_number">edit phone</string>
    <string name="accept_terms">you should accept terms</string>
    <string name="user_not_active">the user is not active</string>
    <string name="error_phone">sorry the phone format not correct</string>
    <string name="wallet">wallet</string>
    <string name="my_wallet">my wallet</string>
    <string name="my_points">my points</string>
    <string name="indoors">indoors</string>
    <string name="trip">trip</string>
    <string name="package_">package</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="records">records</string>
    <string name="current_payments">current payment methods</string>
    <string name="add_credit">add credit card</string>
    <string name="charge">charge</string>
    <string name="credit">credit card</string>
    <string name="copuon">copun</string>
    <string name="balance">the balance</string>
    <string name="use_mycharge"> <![CDATA[
         use my balance first <b><font color=#2CB673>(%s)</font></b>
    ]]></string>
    <string name="your_points">your points</string>
    <string name="you_can_use">you can exchange these points into charge in your wallet and use it in your trips in app</string>
    <string name="no_previous_trips">no previous trips</string>
    <string name="mins">mins</string>
    <string name="date_time">date</string>
    <string name="notes">notes</string>
    <string name="nearest_by_places">nearest places</string>
    <string name="saved_places">saved places</string>
    <string name="meter">m</string>
    <string name="enter_name">enter place name (Home/Work...etc)</string>
    <string name="place_details">place details</string>
    <string name="unsave_remove">remove place</string>
    <string name="confirm_delete">you will remove this place from favorites</string>
    <string name="cash">cash</string>
    <string name="offers">offers</string>
    <string name="promo_code">+promo code</string>
    <string name="try_other_price">try other way of price more cheaply (optional)</string>
    <string name="allow_offer">allow offer price</string>
    <string name="allow_share">allow share trip</string>
    <string name="hint_price_share">(in case no passengers you will pay with normal price plan)</string>
    <string name="persons">persons</string>
    <string name="error_date_format">error date format</string>
    <string name="error_time_format">error time format</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="payment_options">payment options</string>
    <string name="expected_price">expected price : </string>
    <string name="expected_time">expected time : </string>
    <string name="free_trips">free trips</string>
    <string name="join_as_captin">join as captain</string>
    <string name="my_trips">my trips</string>
    <string name="join">join</string>
    <string name="details_ride">details ride</string>
    <string name="captin_rate">captain rate</string>
    <string name="cancel_reason">cancel reason</string>
    <string name="enter_value_charge">enter the charge value</string>
    <string name="available_charge">


    </string>
    <string name="charge_value">charge value</string>
    <string name="transfer_charge">transfer charge</string>
    <string name="transfered_success">transfered successfully</string>
    <string name="contact_ways">contact ways :</string>
    <string name="contact_us_by_message">contact us by texting</string>
    <string name="src_dist_point">you can detect the start point and the end point</string>
    <string name="transport_operation">transport  measure</string>
    <string name="operation_type">operation type</string>
    <string name="start_journey">start your ride</string>
    <string name="transport_package">you can transport ride or package</string>
    <string name="choose_offer">choose your offer for cheaper way</string>
    <string name="language_settings">language setting</string>
    <string name="obtain_price">invite friends to obtain</string>
    <string name="share_invite_msg">share invitaion code</string>
    <string name="enter_invitation_code">enter invitaion code</string>
    <string name="invite_friends">
    </string>
    <string name="price_invite"></string>
    <string name="ezzak_welcome"></string>
    <string name="activate">activate</string>
    <string name="shipping_cupon">shipping cupon</string>
    <string name="exchange">exchange</string>
    <string name="ride_fare">ride fare</string>
    <string name="starting">Starting</string>
    <string name="moving">Moving</string>
    <string name="waiting">Waiting</string>
    <string name="subtotal">Subtotal</string>
    <string name="vat">VAT</string>
    <string name="amount_charged">Amount charged</string>
    <string name="distance_msg"> </string>
    <string name="add_pocket"></string>
    <string name="call_captin">call captain</string>
    <string name="tracking_ride">tracking ride</string>
    <string name="show_profile">show captain data</string>
    <string name="hide_captin_data">hide captain data</string>
    <string name="cost_ride">the totally ride cost</string>
    <string name="pay_msg">you will pay with the selected payment way</string>
    <string name="rate_captin">rate captain</string>
    <string name="total_cost">total cost</string>
    <string name="recieve_rides">i don\'t want deal with this captain again</string>
    <string name="captin_price">captain price</string>
    <string name="select">select</string>
    <string name="no_bids_available">no available bids</string>
    <string name="offer_accepted">offer accepted</string>
    <string name="enter_phone_sent">enter receiver phone</string>
    <string name="copy">copy</string>
    <string name="rush_hour">rush hour</string>
    <string name="option_trip">this option prefered to entirly rides</string>
    <string name="search_for_driver">looking for captain</string>
    <string name="continue_phone">continue using phone number</string>
    <string name="join_cap">Join as captain</string>
    <string name="continue_face">
            <![CDATA[continue by <font color=#1977f2><b>facebook</b></font> ]]>
    </string>
    <string name="continue_face_btn">continue using facebook</string>
    <string name="name">name</string>
    <string name="enter_your_name">Enter your full name to recognize by captains</string>
    <string name="error_mail_format">error mail format</string>
    <string name="have_invation">have an invitation code ?</string>
    <string name="fire">fire</string>
    <string name="detect_start_point">detect start point</string>
    <string name="where_to_go">where to go ?</string>
    <string name="current_charge">current charge</string>
    <string name="what_want">write what do you need from captain </string>
    <string name="dist_hint">destination</string>
    <string name="registered_successfully">Your request has been sent successfully. The administration will contact you. Thank you.</string>
    <string name="GoToLogin">Go To Login</string>
</resources>