<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.menu.MyChargeActivity">
<include
    layout="@layout/toolbar_normal"
    />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/wallett"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_normal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_charge"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textsize1"
        android:fontFamily="@font/jf_flat_bold"
        />
    <TextView
        android:id="@+id/current_charge_tv"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textsize"
        android:gravity="center"
        android:layout_margin="@dimen/margin_large"
        android:fontFamily="@font/jf_flat_bold"
        android:background="@drawable/background"
        android:padding="@dimen/padding_med"
        android:backgroundTint="#f9f9f9"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/charge_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_large"
            android:fontFamily="@font/jf_flat_semi"
            android:text="@string/charge"
            android:textColor="@color/main_text_color"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/transfer_charge_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:fontFamily="@font/jf_flat_semi"
            android:backgroundTint="#f9f9f9"
            android:text="@string/transfer_charge"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/margin_large"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/payment_options"
        android:fontFamily="@font/jf_flat_bold"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/moneyy"
            android:layout_marginStart="@dimen/margin_large"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_normal"
        android:text="@string/cash"

        android:fontFamily="@font/jf_flat_bold"
        />


    </LinearLayout>
</LinearLayout>