<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_confirmArrive"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="@dimen/medium_margin"
    android:background="@drawable/border_white_background"
    android:orientation="vertical">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/medium_margin"
        android:src="@drawable/checkk"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="@string/registered_successfully" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="2"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="horizontal">


        <Button
            android:id="@+id/butt_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_null_background"
            android:textAllCaps="false"
            android:text="@string/GoToLogin" />

        <Button
            android:id="@+id/butt_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:background="@drawable/border_null_background"
            android:textAllCaps="false"
            android:text="@string/no" />
    </LinearLayout>
</LinearLayout>

