<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_normal"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


    <include
        layout="@layout/item_subcat_search_adapter"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_large"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:fontFamily="@font/jf_flat_semi"
            android:textColor="@android:color/black"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/textsize1"
            android:textColor="@android:color/black"
            android:fontFamily="@font/jf_flat_semi"
            android:drawableEnd="@mipmap/blue_location"
            android:layout_marginTop="@dimen/margin_normal"

            />
        <EditText
            android:id="@+id/et_dist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dist_hint"
            android:fontFamily="@font/jf_flat_semi"
            android:textSize="@dimen/textsize2"
            android:focusable="false"
            android:clickable="true"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/order_shape"
        android:layout_margin="@dimen/margin_large"
        >
        <EditText
            android:id="@+id/etOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/what_want"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:fontFamily="@font/jf_flat_semi"
            android:gravity="top|start"
            android:textSize="@dimen/textsize2"
            android:backgroundTint="@android:color/transparent"
            android:lines="8"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imgs_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center_vertical"

            >


            <LinearLayout
                android:id="@+id/parent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"

                >




            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/order_shape"
        android:layout_margin="@dimen/margin_large"
        >
        <EditText
            android:id="@+id/etExpected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/expected_price"
            android:editable="false"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:fontFamily="@font/jf_flat_semi"
            android:gravity="top|start"
            android:textSize="@dimen/textsize2"
            android:backgroundTint="@android:color/transparent"
            android:lines="1"
            />
        <ProgressBar
            android:id="@+id/progress_expected"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            android:indeterminateTint="@color/colorAccent"
            />


    </LinearLayout>
<include
    layout="@layout/price_plan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_large"
    />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/order_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/order_now"
        android:layout_margin="@dimen/margin_xlarge"
        android:enabled="true"
        android:textColor="@color/main_text_color"
        />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
